2005-03-02  Jeff Godfrey <jeff_godfrey@pobox.com>

    * asteroids.tcl
    - Fixed Bug #1155390 - Background "heartbeat" sound (which gets
      progressively faster throughout a game), was not being reset to its
      initial _slow_ speed when the game ended.
    
2005-02-27  Jeff Godfrey <jeff_godfrey@pobox.com>

    * asteroids.tcl
    - Fixed - Newly added "Pause" state didn't work with "Game Loop Godfrey"
    - Added back ability to return to main menu during game play by pressing
      <Esc> (lost when Pause mode was added)

2005-02-27  Jeff Godfrey <jeff_godfrey@pobox.com>

    * asteroids.tcl:
    - General code formatting and alignment cleanup
    - Added game Pause function, bound to "P" and "p"

2005-02-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* asteroids.tcl: add options to the main menu to control game
	loop, sound and color.  Removed menu and put About on main menu.
	Made all items respond to mouse.

2005-02-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* asteroids.tcl: introduce a sense of scaling, to allow the game
	to adapt to smaller screens.

	* asteroids.tcl: introduce named fonts, colors for items.
	Move the FPS label into the canvas, other code cleanup.

	* asteroids.tcl: Updated version from the wiki with the following:
	- Added a second version of the "gameLoop" proc, provided by Jeff
	  Hobbs.  The original version is not CPU friendly as it just runs
	  the game as fast as it can inside a "while" loop.  Jeff H's mod
	  uses the event loop for processing, and tends to place a much
	  lighter load on the CPU.  Immediately below the two gameLoop procs
	  (gameLoop0 and gameLoop1), you'll need to decide which one you
	  want to use and "rename" one of them to gameLoop. Currently,
	  Jeff H's loop is being used.  If you have any animation problems
	  with either loop, try the other one.  Both seem to provide a
	  similar experience.
	- Score and level info is now *drawn* for a more authentic look
	- Extra ship every 10,000 points